Aggiunta possibilità di modificare elementi esistenti! (BONUS OK! :D)

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <main>
             <header>
                 <h1>TO-DO-LIST by Bafs93</h1>
-                <div class="right">
+                <div class="input-box">
                     <strong>Premi INVIO per inserire! -&gt;&nbsp;</strong>
-                    <input type="text" name="" placeholder="Inserisci un nuovo to-do!">
+                    <input type="text" name="" placeholder="Modifica questo to-do!" class=" support modify">
+                    <input type="text" name="" placeholder="Inserisci un nuovo to-do!" class="  new">
                 </div>
             </header>
             <ul id="lista">
